# wgpu-experiments

./: Cargo.toml  index.html  rust-toolchain.toml  rustfmt.toml
.github/workflows/: deploy.yaml
pkg/: package.json  wgpu_experiments.d.ts  wgpu_experiments.js  wgpu_experiments_bg.wasm  wgpu_experiments_bg.wasm.d.ts
src/: camera.rs  lib.rs  main.rs  render_state.rs  shader.wgsl  tex2d.rs  types.rs  vertex.rs
static/: index.html
